--- a/histcleaner.cabal
+++ b/histcleaner.cabal
@@ -31,6 +31,7 @@ library
     , filepath
 --    , memory
     , mtl
+    , split
     , unix
     , utf8-string
     , xdg-basedir
@@ -57,3 +58,20 @@ executable histcleaner
   ghc-options:
     -O
 
+test-suite histcleaner-test
+  import: common-settings
+  type: exitcode-stdio-1.0
+  hs-source-dirs: test
+  main-is: Spec.hs
+
+  other-modules:
+    CleanerSpec
+  build-depends:
+      base
+    , hspec
+    , hspec-discover
+    , histcleaner
+  ghc-options:
+    -O -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:
+    hspec-discover:hspec-discover
