--- a/histcleaner.cabal
+++ b/histcleaner.cabal
@@ -68,9 +68,11 @@ test-suite histcleaner-test
     CleanerSpec
   build-depends:
       base
+    , bytestring
+    , histcleaner
     , hspec
     , hspec-discover
-    , histcleaner
+    , mtl
   ghc-options:
     -O -threaded -rtsopts -with-rtsopts=-N
   build-tool-depends:
