Initial support for formatted filetypes. Currently only support for .lesshst is implemented.

--- a/histcleaner.cabal
+++ b/histcleaner.cabal
@@ -38,6 +38,7 @@ library
   exposed-modules:
     HistCleaner
       HistCleaner.Cleaner
+      HistCleaner.FileParser
       HistCleaner.Hash
       HistCleaner.SecretStorage
   -- other-modules:
