Remove the remembered endLines when a secret is added to the list.

--- a/histcleaner.cabal
+++ b/histcleaner.cabal
@@ -40,6 +40,7 @@ library
   exposed-modules:
     HistCleaner
       HistCleaner.Cleaner
+      HistCleaner.Config
       HistCleaner.FileParser
       HistCleaner.Hash
       HistCleaner.SecretStorage
