--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -45,6 +45,10 @@ jobs:
     - name: Run tests
       run: cabal test all
 
+    - name: Strip binary for release
+      if: startsWith(github.ref, 'refs/tags/')
+      run: strip dist-newstyle/build/x86_64-linux/ghc-*/histcleaner-*/x/histcleaner/build/histcleaner/histcleaner
+
     - name: Upload release assets
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
